hw5/j0gram.output
Terminals unused in grammar

    CASE
    CONTINUE
    DEFAULT
    INSTANCEOF
    LONG
    SWITCH
    NOT_RESERVED
    TYPE_CAST
    CHAR_ERROR
    INT_ERROR
    UNKNOWN
    STRING_ERROR
    OPEN_COMMENT
    THEN
    ':'


State 26 conflicts: 1 shift/reduce
State 45 conflicts: 1 shift/reduce
State 53 conflicts: 1 shift/reduce
State 119 conflicts: 1 shift/reduce


Grammar

    0 $accept: ClassDecl $end

    1 ClassDecl: PUBLIC CLASS IDENTIFIER ClassBody

    2 ClassBody: '{' ClassBodyDecls '}'
    3          | '{' '}'

    4 ClassBodyDecls: ClassBodyDecl
    5               | ClassBodyDecls ClassBodyDecl

    6 ClassBodyDecl: FieldDecl
    7              | FieldDeclAssign
    8              | MethodDecl
    9              | ConstructorDecl

   10 FieldDecl: Type VarDecls ';'
   11          | PUBLIC STATIC Type VarDecls ';'

   12 FieldDeclAssign: Type VarDeclarator '=' Expr ';'
   13                | PUBLIC STATIC Type VarDeclarator '=' Expr ';'

   14 OptTypeArray: TypeArray
   15             | Type

   16 TypeArray: Type '[' OptInt ']'
   17          | '[' ']' Type

   18 Type: INT
   19     | DOUBLE
   20     | BOOLEAN
   21     | FLOAT
   22     | STRING
   23     | CHAR
   24     | Name

   25 Name: IDENTIFIER
   26     | QualifiedName

   27 QualifiedName: IDENTIFIER '.' Name

   28 VarDecls: VarDeclarator
   29         | VarDecls ',' VarDeclarator

   30 VarDeclarator: IDENTIFIER
   31              | VarDeclarator '[' ']'
   32              | '[' ']' VarDeclarator

   33 MethodReturnVal: OptTypeArray
   34                | VOID

   35 MethodDecl: MethodHeader Block

   36 MethodHeader: PUBLIC STATIC MethodReturnVal MethodDeclarator
   37             | PUBLIC MethodReturnVal MethodDeclarator
   38             | STATIC MethodReturnVal MethodDeclarator
   39             | MethodReturnVal MethodDeclarator

   40 MethodDeclarator: IDENTIFIER '(' FormalParmListOpt ')'

   41 FormalParmListOpt: FormalParmList
   42                  | %empty

   43 FormalParmList: FormalParm
   44               | FormalParmList ',' FormalParm

   45 FormalParm: Type VarDeclarator

   46 ConstructorDecl: ConstructorDeclarator Block

   47 ConstructorDeclarator: IDENTIFIER '(' FormalParmListOpt ')'

   48 ArgListOpt: ArgList
   49           | %empty

   50 Block: '{' BlockStmtsOpt '}'

   51 BlockStmtsOpt: BlockStmts
   52              | %empty

   53 BlockStmts: BlockStmt
   54           | BlockStmts BlockStmt

   55 BlockStmt: LocalVarDeclStmt
   56          | Stmt

   57 LocalVarDeclStmt: LocalVarDecl ';'

   58 LocalVarDecl: Type VarDecls

   59 Stmt: Block
   60     | ';'
   61     | ExprStmt
   62     | BreakStmt
   63     | ReturnStmt
   64     | IfThenStmt
   65     | IfThenElseStmt
   66     | IfThenElseIfStmt
   67     | WhileStmt
   68     | ForStmt

   69 ExprStmt: StmtExpr ';'

   70 StmtExpr: Assignment
   71         | MethodCall
   72         | InstantiationExpr

   73 IfThenStmt: IF '(' Expr ')' Block

   74 IfThenElseStmt: IF '(' Expr ')' Block ELSE Block

   75 IfThenElseIfStmt: IF '(' Expr ')' Block ElseIfSequence
   76                 | IF '(' Expr ')' Block ElseIfSequence ELSE Block

   77 ElseIfSequence: ElseIfStmt
   78               | ElseIfSequence ElseIfStmt

   79 ElseIfStmt: ELSE IfThenStmt

   80 WhileStmt: WHILE '(' Expr ')' Stmt

   81 ForStmt: FOR '(' ForInit ';' ExprOpt ';' ForUpdate ')' Block

   82 ForInit: StmtExprList
   83        | LocalVarDecl
   84        | %empty

   85 ExprOpt: Expr
   86        | %empty

   87 ForUpdate: StmtExprList
   88          | %empty

   89 StmtExprList: StmtExpr
   90             | StmtExprList ',' StmtExpr

   91 BreakStmt: BREAK ';'
   92          | BREAK IDENTIFIER ';'

   93 ReturnStmt: RETURN ExprOpt ';'

   94 Primary: Literal
   95        | '(' Expr ')'
   96        | FieldAccess
   97        | MethodCall

   98 OptInt: INTEGER_LITERAL
   99       | %empty

  100 Literal: INTEGER_LITERAL
  101        | FLOAT_LITERAL
  102        | BOOLEAN_LITERAL
  103        | STRING_LITERAL
  104        | NULLVAL
  105        | CHARACTER_LITERAL

  106 InstantiationExpr: NEW Type '(' ArgListOpt ')'
  107                  | NEW TypeArray

  108 ArgList: Expr
  109        | ArgList ',' Expr

  110 FieldAccess: Primary '.' IDENTIFIER

  111 MethodCall: Name '(' ArgListOpt ')'
  112           | Name '{' ArgListOpt '}'
  113           | Primary '.' IDENTIFIER '(' ArgListOpt ')'
  114           | Primary '.' IDENTIFIER '{' ArgListOpt '}'

  115 PostFixExpr: Primary
  116            | Name

  117 UnaryExpr: '-' UnaryExpr
  118          | '!' UnaryExpr
  119          | PostFixExpr

  120 MulExpr: UnaryExpr
  121        | MulExpr '*' UnaryExpr
  122        | MulExpr '/' UnaryExpr
  123        | MulExpr '%' UnaryExpr

  124 AddExpr: MulExpr
  125        | AddExpr '+' MulExpr
  126        | AddExpr '-' MulExpr

  127 RelOp: LESS_EQUAL
  128      | GREATER_EQUAL
  129      | '<'
  130      | '>'

  131 RelExpr: AddExpr
  132        | RelExpr RelOp AddExpr

  133 EqExpr: RelExpr
  134       | EqExpr EQUAL RelExpr
  135       | EqExpr NOT_EQUAL RelExpr

  136 CondAndExpr: EqExpr
  137            | CondAndExpr LOGIC_AND EqExpr

  138 CondOrExpr: CondAndExpr
  139           | CondOrExpr LOGIC_OR CondAndExpr

  140 Expr: CondOrExpr
  141     | InstantiationExpr
  142     | Assignment

  143 Assignment: LeftHandSide AssignOp Expr
  144           | LeftHandSide AssignOp
  145           | Type VarDeclarator AssignOp Expr

  146 LeftHandSide: Name
  147             | FieldAccess
  148             | TypeArray

  149 AssignOp: '='
  150         | INCREMENT
  151         | DECREMENT


Terminals, with rules where they appear

    $end (0) 0
    '!' <treeptr> (33) 118
    '%' <treeptr> (37) 123
    '(' <treeptr> (40) 40 47 73 74 75 76 80 81 95 106 111 113
    ')' <treeptr> (41) 40 47 73 74 75 76 80 81 95 106 111 113
    '*' <treeptr> (42) 121
    '+' <treeptr> (43) 125
    ',' <treeptr> (44) 29 44 90 109
    '-' <treeptr> (45) 117 126
    '.' <treeptr> (46) 27 110 113 114
    '/' <treeptr> (47) 122
    ':' <treeptr> (58)
    ';' <treeptr> (59) 10 11 12 13 57 60 69 81 91 92 93
    '<' <treeptr> (60) 129
    '=' <treeptr> (61) 12 13 149
    '>' <treeptr> (62) 130
    '[' <treeptr> (91) 16 17 31 32
    ']' <treeptr> (93) 16 17 31 32
    '{' (123) 2 3 50 112 114
    '}' (125) 2 3 50 112 114
    error (256)
    BREAK <treeptr> (258) 91 92
    DOUBLE <treeptr> (259) 19
    ELSE <treeptr> (260) 74 76 79
    FOR <treeptr> (261) 81
    IF <treeptr> (262) 73 74 75 76
    INT <treeptr> (263) 18
    RETURN <treeptr> (264) 93
    VOID <treeptr> (265) 34
    WHILE <treeptr> (266) 80
    CLASS <treeptr> (267) 1
    STRING <treeptr> (268) 22
    BOOLEAN <treeptr> (269) 20
    CASE <treeptr> (270)
    CHAR <treeptr> (271) 23
    CONTINUE <treeptr> (272)
    DEFAULT <treeptr> (273)
    FLOAT <treeptr> (274) 21
    INSTANCEOF <treeptr> (275)
    LONG <treeptr> (276)
    NEW <treeptr> (277) 106 107
    SWITCH <treeptr> (278)
    NOT_RESERVED <treeptr> (279)
    PUBLIC <treeptr> (280) 1 11 13 36 37
    STATIC <treeptr> (281) 11 13 36 38
    IDENTIFIER <treeptr> (282) 1 25 27 30 40 47 92 110 113 114
    INTEGER_LITERAL <treeptr> (283) 98 100
    FLOAT_LITERAL <treeptr> (284) 101
    STRING_LITERAL <treeptr> (285) 103
    BOOLEAN_LITERAL <treeptr> (286) 102
    NULLVAL <treeptr> (287) 104
    CHARACTER_LITERAL <treeptr> (288) 105
    INCREMENT <treeptr> (289) 150
    DECREMENT <treeptr> (290) 151
    TYPE_CAST <treeptr> (291)
    LESS_EQUAL <treeptr> (292) 127
    GREATER_EQUAL <treeptr> (293) 128
    EQUAL <treeptr> (294) 134
    NOT_EQUAL <treeptr> (295) 135
    LOGIC_AND <treeptr> (296) 137
    LOGIC_OR <treeptr> (297) 139
    CHAR_ERROR <treeptr> (298)
    INT_ERROR <treeptr> (299)
    UNKNOWN <treeptr> (300)
    STRING_ERROR <treeptr> (301)
    OPEN_COMMENT <treeptr> (302)
    THEN <treeptr> (303)


Nonterminals, with rules where they appear

    $accept (68)
        on left: 0
    ClassDecl <treeptr> (69)
        on left: 1
        on right: 0
    ClassBody <treeptr> (70)
        on left: 2 3
        on right: 1
    ClassBodyDecls <treeptr> (71)
        on left: 4 5
        on right: 2 5
    ClassBodyDecl <treeptr> (72)
        on left: 6 7 8 9
        on right: 4 5
    FieldDecl <treeptr> (73)
        on left: 10 11
        on right: 6
    FieldDeclAssign <treeptr> (74)
        on left: 12 13
        on right: 7
    OptTypeArray <treeptr> (75)
        on left: 14 15
        on right: 33
    TypeArray <treeptr> (76)
        on left: 16 17
        on right: 14 107 148
    Type <treeptr> (77)
        on left: 18 19 20 21 22 23 24
        on right: 10 11 12 13 15 16 17 45 58 106 145
    Name <treeptr> (78)
        on left: 25 26
        on right: 24 27 111 112 116 146
    QualifiedName <treeptr> (79)
        on left: 27
        on right: 26
    VarDecls <treeptr> (80)
        on left: 28 29
        on right: 10 11 29 58
    VarDeclarator <treeptr> (81)
        on left: 30 31 32
        on right: 12 13 28 29 31 32 45 145
    MethodReturnVal <treeptr> (82)
        on left: 33 34
        on right: 36 37 38 39
    MethodDecl <treeptr> (83)
        on left: 35
        on right: 8
    MethodHeader <treeptr> (84)
        on left: 36 37 38 39
        on right: 35
    MethodDeclarator <treeptr> (85)
        on left: 40
        on right: 36 37 38 39
    FormalParmListOpt <treeptr> (86)
        on left: 41 42
        on right: 40 47
    FormalParmList <treeptr> (87)
        on left: 43 44
        on right: 41 44
    FormalParm <treeptr> (88)
        on left: 45
        on right: 43 44
    ConstructorDecl <treeptr> (89)
        on left: 46
        on right: 9
    ConstructorDeclarator <treeptr> (90)
        on left: 47
        on right: 46
    ArgListOpt <treeptr> (91)
        on left: 48 49
        on right: 106 111 112 113 114
    Block <treeptr> (92)
        on left: 50
        on right: 35 46 59 73 74 75 76 81
    BlockStmtsOpt <treeptr> (93)
        on left: 51 52
        on right: 50
    BlockStmts <treeptr> (94)
        on left: 53 54
        on right: 51 54
    BlockStmt <treeptr> (95)
        on left: 55 56
        on right: 53 54
    LocalVarDeclStmt <treeptr> (96)
        on left: 57
        on right: 55
    LocalVarDecl <treeptr> (97)
        on left: 58
        on right: 57 83
    Stmt <treeptr> (98)
        on left: 59 60 61 62 63 64 65 66 67 68
        on right: 56 80
    ExprStmt <treeptr> (99)
        on left: 69
        on right: 61
    StmtExpr <treeptr> (100)
        on left: 70 71 72
        on right: 69 89 90
    IfThenStmt <treeptr> (101)
        on left: 73
        on right: 64 79
    IfThenElseStmt <treeptr> (102)
        on left: 74
        on right: 65
    IfThenElseIfStmt <treeptr> (103)
        on left: 75 76
        on right: 66
    ElseIfSequence <treeptr> (104)
        on left: 77 78
        on right: 75 76 78
    ElseIfStmt <treeptr> (105)
        on left: 79
        on right: 77 78
    WhileStmt <treeptr> (106)
        on left: 80
        on right: 67
    ForStmt <treeptr> (107)
        on left: 81
        on right: 68
    ForInit <treeptr> (108)
        on left: 82 83 84
        on right: 81
    ExprOpt <treeptr> (109)
        on left: 85 86
        on right: 81 93
    ForUpdate <treeptr> (110)
        on left: 87 88
        on right: 81
    StmtExprList <treeptr> (111)
        on left: 89 90
        on right: 82 87 90
    BreakStmt <treeptr> (112)
        on left: 91 92
        on right: 62
    ReturnStmt <treeptr> (113)
        on left: 93
        on right: 63
    Primary <treeptr> (114)
        on left: 94 95 96 97
        on right: 110 113 114 115
    OptInt <treeptr> (115)
        on left: 98 99
        on right: 16
    Literal <treeptr> (116)
        on left: 100 101 102 103 104 105
        on right: 94
    InstantiationExpr <treeptr> (117)
        on left: 106 107
        on right: 72 141
    ArgList <treeptr> (118)
        on left: 108 109
        on right: 48 109
    FieldAccess <treeptr> (119)
        on left: 110
        on right: 96 147
    MethodCall <treeptr> (120)
        on left: 111 112 113 114
        on right: 71 97
    PostFixExpr <treeptr> (121)
        on left: 115 116
        on right: 119
    UnaryExpr <treeptr> (122)
        on left: 117 118 119
        on right: 117 118 120 121 122 123
    MulExpr <treeptr> (123)
        on left: 120 121 122 123
        on right: 121 122 123 124 125 126
    AddExpr <treeptr> (124)
        on left: 124 125 126
        on right: 125 126 131 132
    RelOp <treeptr> (125)
        on left: 127 128 129 130
        on right: 132
    RelExpr <treeptr> (126)
        on left: 131 132
        on right: 132 133 134 135
    EqExpr <treeptr> (127)
        on left: 133 134 135
        on right: 134 135 136 137
    CondAndExpr <treeptr> (128)
        on left: 136 137
        on right: 137 138 139
    CondOrExpr <treeptr> (129)
        on left: 138 139
        on right: 139 140
    Expr <treeptr> (130)
        on left: 140 141 142
        on right: 12 13 73 74 75 76 80 85 95 108 109 143 145
    Assignment <treeptr> (131)
        on left: 143 144 145
        on right: 70 142
    LeftHandSide <treeptr> (132)
        on left: 146 147 148
        on right: 143 144
    AssignOp <treeptr> (133)
        on left: 149 150 151
        on right: 143 144 145


State 0

    0 $accept: . ClassDecl $end

    PUBLIC  shift, and go to state 1

    ClassDecl  go to state 2


State 1

    1 ClassDecl: PUBLIC . CLASS IDENTIFIER ClassBody

    CLASS  shift, and go to state 3


State 2

    0 $accept: ClassDecl . $end

    $end  shift, and go to state 4


State 3

    1 ClassDecl: PUBLIC CLASS . IDENTIFIER ClassBody

    IDENTIFIER  shift, and go to state 5


State 4

    0 $accept: ClassDecl $end .

    $default  accept


State 5

    1 ClassDecl: PUBLIC CLASS IDENTIFIER . ClassBody

    '{'  shift, and go to state 6

    ClassBody  go to state 7


State 6

    2 ClassBody: '{' . ClassBodyDecls '}'
    3          | '{' . '}'

    DOUBLE      shift, and go to state 8
    INT         shift, and go to state 9
    VOID        shift, and go to state 10
    STRING      shift, and go to state 11
    BOOLEAN     shift, and go to state 12
    CHAR        shift, and go to state 13
    FLOAT       shift, and go to state 14
    PUBLIC      shift, and go to state 15
    STATIC      shift, and go to state 16
    IDENTIFIER  shift, and go to state 17
    '['         shift, and go to state 18
    '}'         shift, and go to state 19

    ClassBodyDecls         go to state 20
    ClassBodyDecl          go to state 21
    FieldDecl              go to state 22
    FieldDeclAssign        go to state 23
    OptTypeArray           go to state 24
    TypeArray              go to state 25
    Type                   go to state 26
    Name                   go to state 27
    QualifiedName          go to state 28
    MethodReturnVal        go to state 29
    MethodDecl             go to state 30
    MethodHeader           go to state 31
    ConstructorDecl        go to state 32
    ConstructorDeclarator  go to state 33


State 7

    1 ClassDecl: PUBLIC CLASS IDENTIFIER ClassBody .

    $default  reduce using rule 1 (ClassDecl)


State 8

   19 Type: DOUBLE .

    $default  reduce using rule 19 (Type)


State 9

   18 Type: INT .

    $default  reduce using rule 18 (Type)


State 10

   34 MethodReturnVal: VOID .

    $default  reduce using rule 34 (MethodReturnVal)


State 11

   22 Type: STRING .

    $default  reduce using rule 22 (Type)


State 12

   20 Type: BOOLEAN .

    $default  reduce using rule 20 (Type)


State 13

   23 Type: CHAR .

    $default  reduce using rule 23 (Type)


State 14

   21 Type: FLOAT .

    $default  reduce using rule 21 (Type)


State 15

   11 FieldDecl: PUBLIC . STATIC Type VarDecls ';'
   13 FieldDeclAssign: PUBLIC . STATIC Type VarDeclarator '=' Expr ';'
   36 MethodHeader: PUBLIC . STATIC MethodReturnVal MethodDeclarator
   37             | PUBLIC . MethodReturnVal MethodDeclarator

    DOUBLE      shift, and go to state 8
    INT         shift, and go to state 9
    VOID        shift, and go to state 10
    STRING      shift, and go to state 11
    BOOLEAN     shift, and go to state 12
    CHAR        shift, and go to state 13
    FLOAT       shift, and go to state 14
    STATIC      shift, and go to state 34
    IDENTIFIER  shift, and go to state 35
    '['         shift, and go to state 18

    OptTypeArray     go to state 24
    TypeArray        go to state 25
    Type             go to state 36
    Name             go to state 27
    QualifiedName    go to state 28
    MethodReturnVal  go to state 37


State 16

   38 MethodHeader: STATIC . MethodReturnVal MethodDeclarator

    DOUBLE      shift, and go to state 8
    INT         shift, and go to state 9
    VOID        shift, and go to state 10
    STRING      shift, and go to state 11
    BOOLEAN     shift, and go to state 12
    CHAR        shift, and go to state 13
    FLOAT       shift, and go to state 14
    IDENTIFIER  shift, and go to state 35
    '['         shift, and go to state 18

    OptTypeArray     go to state 24
    TypeArray        go to state 25
    Type             go to state 36
    Name             go to state 27
    QualifiedName    go to state 28
    MethodReturnVal  go to state 38


State 17

   25 Name: IDENTIFIER .
   27 QualifiedName: IDENTIFIER . '.' Name
   47 ConstructorDeclarator: IDENTIFIER . '(' FormalParmListOpt ')'

    '('  shift, and go to state 39
    '.'  shift, and go to state 40

    $default  reduce using rule 25 (Name)


State 18

   17 TypeArray: '[' . ']' Type

    ']'  shift, and go to state 41


State 19

    3 ClassBody: '{' '}' .

    $default  reduce using rule 3 (ClassBody)


State 20

    2 ClassBody: '{' ClassBodyDecls . '}'
    5 ClassBodyDecls: ClassBodyDecls . ClassBodyDecl

    DOUBLE      shift, and go to state 8
    INT         shift, and go to state 9
    VOID        shift, and go to state 10
    STRING      shift, and go to state 11
    BOOLEAN     shift, and go to state 12
    CHAR        shift, and go to state 13
    FLOAT       shift, and go to state 14
    PUBLIC      shift, and go to state 15
    STATIC      shift, and go to state 16
    IDENTIFIER  shift, and go to state 17
    '['         shift, and go to state 18
    '}'         shift, and go to state 42

    ClassBodyDecl          go to state 43
    FieldDecl              go to state 22
    FieldDeclAssign        go to state 23
    OptTypeArray           go to state 24
    TypeArray              go to state 25
    Type                   go to state 26
    Name                   go to state 27
    QualifiedName          go to state 28
    MethodReturnVal        go to state 29
    MethodDecl             go to state 30
    MethodHeader           go to state 31
    ConstructorDecl        go to state 32
    ConstructorDeclarator  go to state 33


State 21

    4 ClassBodyDecls: ClassBodyDecl .

    $default  reduce using rule 4 (ClassBodyDecls)


State 22

    6 ClassBodyDecl: FieldDecl .

    $default  reduce using rule 6 (ClassBodyDecl)


State 23

    7 ClassBodyDecl: FieldDeclAssign .

    $default  reduce using rule 7 (ClassBodyDecl)


State 24

   33 MethodReturnVal: OptTypeArray .

    $default  reduce using rule 33 (MethodReturnVal)


State 25

   14 OptTypeArray: TypeArray .

    $default  reduce using rule 14 (OptTypeArray)


State 26

   10 FieldDecl: Type . VarDecls ';'
   12 FieldDeclAssign: Type . VarDeclarator '=' Expr ';'
   15 OptTypeArray: Type .
   16 TypeArray: Type . '[' OptInt ']'

    IDENTIFIER  shift, and go to state 44
    '['         shift, and go to state 45

    IDENTIFIER  [reduce using rule 15 (OptTypeArray)]

    VarDecls       go to state 46
    VarDeclarator  go to state 47


State 27

   24 Type: Name .

    $default  reduce using rule 24 (Type)


State 28

   26 Name: QualifiedName .

    $default  reduce using rule 26 (Name)


State 29

   39 MethodHeader: MethodReturnVal . MethodDeclarator

    IDENTIFIER  shift, and go to state 48

    MethodDeclarator  go to state 49


State 30

    8 ClassBodyDecl: MethodDecl .

    $default  reduce using rule 8 (ClassBodyDecl)


State 31

   35 MethodDecl: MethodHeader . Block

    '{'  shift, and go to state 50

    Block  go to state 51


State 32

    9 ClassBodyDecl: ConstructorDecl .

    $default  reduce using rule 9 (ClassBodyDecl)


State 33

   46 ConstructorDecl: ConstructorDeclarator . Block

    '{'  shift, and go to state 50

    Block  go to state 52


State 34

   11 FieldDecl: PUBLIC STATIC . Type VarDecls ';'
   13 FieldDeclAssign: PUBLIC STATIC . Type VarDeclarator '=' Expr ';'
   36 MethodHeader: PUBLIC STATIC . MethodReturnVal MethodDeclarator

    DOUBLE      shift, and go to state 8
    INT         shift, and go to state 9
    VOID        shift, and go to state 10
    STRING      shift, and go to state 11
    BOOLEAN     shift, and go to state 12
    CHAR        shift, and go to state 13
    FLOAT       shift, and go to state 14
    IDENTIFIER  shift, and go to state 35
    '['         shift, and go to state 18

    OptTypeArray     go to state 24
    TypeArray        go to state 25
    Type             go to state 53
    Name             go to state 27
    QualifiedName    go to state 28
    MethodReturnVal  go to state 54


State 35

   25 Name: IDENTIFIER .
   27 QualifiedName: IDENTIFIER . '.' Name

    '.'  shift, and go to state 40

    $default  reduce using rule 25 (Name)


State 36

   15 OptTypeArray: Type .
   16 TypeArray: Type . '[' OptInt ']'

    '['  shift, and go to state 55

    $default  reduce using rule 15 (OptTypeArray)


State 37

   37 MethodHeader: PUBLIC MethodReturnVal . MethodDeclarator

    IDENTIFIER  shift, and go to state 48

    MethodDeclarator  go to state 56


State 38

   38 MethodHeader: STATIC MethodReturnVal . MethodDeclarator

    IDENTIFIER  shift, and go to state 48

    MethodDeclarator  go to state 57


State 39

   47 ConstructorDeclarator: IDENTIFIER '(' . FormalParmListOpt ')'

    DOUBLE      shift, and go to state 8
    INT         shift, and go to state 9
    STRING      shift, and go to state 11
    BOOLEAN     shift, and go to state 12
    CHAR        shift, and go to state 13
    FLOAT       shift, and go to state 14
    IDENTIFIER  shift, and go to state 35

    $default  reduce using rule 42 (FormalParmListOpt)

    Type               go to state 58
    Name               go to state 27
    QualifiedName      go to state 28
    FormalParmListOpt  go to state 59
    FormalParmList     go to state 60
    FormalParm         go to state 61


State 40

   27 QualifiedName: IDENTIFIER '.' . Name

    IDENTIFIER  shift, and go to state 35

    Name           go to state 62
    QualifiedName  go to state 28


State 41

   17 TypeArray: '[' ']' . Type

    DOUBLE      shift, and go to state 8
    INT         shift, and go to state 9
    STRING      shift, and go to state 11
    BOOLEAN     shift, and go to state 12
    CHAR        shift, and go to state 13
    FLOAT       shift, and go to state 14
    IDENTIFIER  shift, and go to state 35

    Type           go to state 63
    Name           go to state 27
    QualifiedName  go to state 28


State 42

    2 ClassBody: '{' ClassBodyDecls '}' .

    $default  reduce using rule 2 (ClassBody)


State 43

    5 ClassBodyDecls: ClassBodyDecls ClassBodyDecl .

    $default  reduce using rule 5 (ClassBodyDecls)


State 44

   30 VarDeclarator: IDENTIFIER .

    $default  reduce using rule 30 (VarDeclarator)


State 45

   16 TypeArray: Type '[' . OptInt ']'
   32 VarDeclarator: '[' . ']' VarDeclarator

    INTEGER_LITERAL  shift, and go to state 64
    ']'              shift, and go to state 65

    ']'  [reduce using rule 99 (OptInt)]

    OptInt  go to state 66


State 46

   10 FieldDecl: Type VarDecls . ';'
   29 VarDecls: VarDecls . ',' VarDeclarator

    ','  shift, and go to state 67
    ';'  shift, and go to state 68


State 47

   12 FieldDeclAssign: Type VarDeclarator . '=' Expr ';'
   28 VarDecls: VarDeclarator .
   31 VarDeclarator: VarDeclarator . '[' ']'

    '='  shift, and go to state 69
    '['  shift, and go to state 70

    $default  reduce using rule 28 (VarDecls)


State 48

   40 MethodDeclarator: IDENTIFIER . '(' FormalParmListOpt ')'

    '('  shift, and go to state 71


State 49

   39 MethodHeader: MethodReturnVal MethodDeclarator .

    $default  reduce using rule 39 (MethodHeader)


State 50

   50 Block: '{' . BlockStmtsOpt '}'

    BREAK              shift, and go to state 72
    DOUBLE             shift, and go to state 8
    FOR                shift, and go to state 73
    IF                 shift, and go to state 74
    INT                shift, and go to state 9
    RETURN             shift, and go to state 75
    WHILE              shift, and go to state 76
    STRING             shift, and go to state 11
    BOOLEAN            shift, and go to state 12
    CHAR               shift, and go to state 13
    FLOAT              shift, and go to state 14
    NEW                shift, and go to state 77
    IDENTIFIER         shift, and go to state 35
    INTEGER_LITERAL    shift, and go to state 78
    FLOAT_LITERAL      shift, and go to state 79
    STRING_LITERAL     shift, and go to state 80
    BOOLEAN_LITERAL    shift, and go to state 81
    NULLVAL            shift, and go to state 82
    CHARACTER_LITERAL  shift, and go to state 83
    '('                shift, and go to state 84
    ';'                shift, and go to state 85
    '['                shift, and go to state 18
    '{'                shift, and go to state 50

    $default  reduce using rule 52 (BlockStmtsOpt)

    TypeArray          go to state 86
    Type               go to state 87
    Name               go to state 88
    QualifiedName      go to state 28
    Block              go to state 89
    BlockStmtsOpt      go to state 90
    BlockStmts         go to state 91
    BlockStmt          go to state 92
    LocalVarDeclStmt   go to state 93
    LocalVarDecl       go to state 94
    Stmt               go to state 95
    ExprStmt           go to state 96
    StmtExpr           go to state 97
    IfThenStmt         go to state 98
    IfThenElseStmt     go to state 99
    IfThenElseIfStmt   go to state 100
    WhileStmt          go to state 101
    ForStmt            go to state 102
    BreakStmt          go to state 103
    ReturnStmt         go to state 104
    Primary            go to state 105
    Literal            go to state 106
    InstantiationExpr  go to state 107
    FieldAccess        go to state 108
    MethodCall         go to state 109
    Assignment         go to state 110
    LeftHandSide       go to state 111


State 51

   35 MethodDecl: MethodHeader Block .

    $default  reduce using rule 35 (MethodDecl)


State 52

   46 ConstructorDecl: ConstructorDeclarator Block .

    $default  reduce using rule 46 (ConstructorDecl)


State 53

   11 FieldDecl: PUBLIC STATIC Type . VarDecls ';'
   13 FieldDeclAssign: PUBLIC STATIC Type . VarDeclarator '=' Expr ';'
   15 OptTypeArray: Type .
   16 TypeArray: Type . '[' OptInt ']'

    IDENTIFIER  shift, and go to state 44
    '['         shift, and go to state 45

    IDENTIFIER  [reduce using rule 15 (OptTypeArray)]

    VarDecls       go to state 112
    VarDeclarator  go to state 113


State 54

   36 MethodHeader: PUBLIC STATIC MethodReturnVal . MethodDeclarator

    IDENTIFIER  shift, and go to state 48

    MethodDeclarator  go to state 114


State 55

   16 TypeArray: Type '[' . OptInt ']'

    INTEGER_LITERAL  shift, and go to state 64

    $default  reduce using rule 99 (OptInt)

    OptInt  go to state 66


State 56

   37 MethodHeader: PUBLIC MethodReturnVal MethodDeclarator .

    $default  reduce using rule 37 (MethodHeader)


State 57

   38 MethodHeader: STATIC MethodReturnVal MethodDeclarator .

    $default  reduce using rule 38 (MethodHeader)


State 58

   45 FormalParm: Type . VarDeclarator

    IDENTIFIER  shift, and go to state 44
    '['         shift, and go to state 115

    VarDeclarator  go to state 116


State 59

   47 ConstructorDeclarator: IDENTIFIER '(' FormalParmListOpt . ')'

    ')'  shift, and go to state 117


State 60

   41 FormalParmListOpt: FormalParmList .
   44 FormalParmList: FormalParmList . ',' FormalParm

    ','  shift, and go to state 118

    $default  reduce using rule 41 (FormalParmListOpt)


State 61

   43 FormalParmList: FormalParm .

    $default  reduce using rule 43 (FormalParmList)


State 62

   27 QualifiedName: IDENTIFIER '.' Name .

    $default  reduce using rule 27 (QualifiedName)


State 63

   17 TypeArray: '[' ']' Type .

    $default  reduce using rule 17 (TypeArray)


State 64

   98 OptInt: INTEGER_LITERAL .

    $default  reduce using rule 98 (OptInt)


State 65

   32 VarDeclarator: '[' ']' . VarDeclarator

    IDENTIFIER  shift, and go to state 44
    '['         shift, and go to state 115

    VarDeclarator  go to state 119


State 66

   16 TypeArray: Type '[' OptInt . ']'

    ']'  shift, and go to state 120


State 67

   29 VarDecls: VarDecls ',' . VarDeclarator

    IDENTIFIER  shift, and go to state 44
    '['         shift, and go to state 115

    VarDeclarator  go to state 121


State 68

   10 FieldDecl: Type VarDecls ';' .

    $default  reduce using rule 10 (FieldDecl)


State 69

   12 FieldDeclAssign: Type VarDeclarator '=' . Expr ';'

    DOUBLE             shift, and go to state 8
    INT                shift, and go to state 9
    STRING             shift, and go to state 11
    BOOLEAN            shift, and go to state 12
    CHAR               shift, and go to state 13
    FLOAT              shift, and go to state 14
    NEW                shift, and go to state 77
    IDENTIFIER         shift, and go to state 35
    INTEGER_LITERAL    shift, and go to state 78
    FLOAT_LITERAL      shift, and go to state 79
    STRING_LITERAL     shift, and go to state 80
    BOOLEAN_LITERAL    shift, and go to state 81
    NULLVAL            shift, and go to state 82
    CHARACTER_LITERAL  shift, and go to state 83
    '-'                shift, and go to state 122
    '!'                shift, and go to state 123
    '('                shift, and go to state 84
    '['                shift, and go to state 18

    TypeArray          go to state 86
    Type               go to state 124
    Name               go to state 125
    QualifiedName      go to state 28
    Primary            go to state 126
    Literal            go to state 106
    InstantiationExpr  go to state 127
    FieldAccess        go to state 108
    MethodCall         go to state 128
    PostFixExpr        go to state 129
    UnaryExpr          go to state 130
    MulExpr            go to state 131
    AddExpr            go to state 132
    RelExpr            go to state 133
    EqExpr             go to state 134
    CondAndExpr        go to state 135
    CondOrExpr         go to state 136
    Expr               go to state 137
    Assignment         go to state 138
    LeftHandSide       go to state 111


State 70

   31 VarDeclarator: VarDeclarator '[' . ']'

    ']'  shift, and go to state 139


State 71

   40 MethodDeclarator: IDENTIFIER '(' . FormalParmListOpt ')'

    DOUBLE      shift, and go to state 8
    INT         shift, and go to state 9
    STRING      shift, and go to state 11
    BOOLEAN     shift, and go to state 12
    CHAR        shift, and go to state 13
    FLOAT       shift, and go to state 14
    IDENTIFIER  shift, and go to state 35

    $default  reduce using rule 42 (FormalParmListOpt)

    Type               go to state 58
    Name               go to state 27
    QualifiedName      go to state 28
    FormalParmListOpt  go to state 140
    FormalParmList     go to state 60
    FormalParm         go to state 61


State 72

   91 BreakStmt: BREAK . ';'
   92          | BREAK . IDENTIFIER ';'

    IDENTIFIER  shift, and go to state 141
    ';'         shift, and go to state 142


State 73

   81 ForStmt: FOR . '(' ForInit ';' ExprOpt ';' ForUpdate ')' Block

    '('  shift, and go to state 143


State 74

   73 IfThenStmt: IF . '(' Expr ')' Block
   74 IfThenElseStmt: IF . '(' Expr ')' Block ELSE Block
   75 IfThenElseIfStmt: IF . '(' Expr ')' Block ElseIfSequence
   76                 | IF . '(' Expr ')' Block ElseIfSequence ELSE Block

    '('  shift, and go to state 144


State 75

   93 ReturnStmt: RETURN . ExprOpt ';'
